--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gamedb1teste",
+  "name": "game",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "AlexandroWillianHervis <alexandro.working@gmail.com>",
@@ -25,7 +25,6 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
